--- a/index.html
+++ b/index.html
@@ -9,6 +9,29 @@
 
 <h1>Classificados Gratuitos de Pedro II</h1>
 <p>Meu primeiro site</p>
+<!-- BOTÃO WHATSAPP -->
+<a href="https://wa.me/5586999999999" class="whatsapp" target="_blank">
+  💬
+</a>
+
+<style>
+  .whatsapp {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #25d366;
+    color: white;
+    padding: 15px 18px;
+    border-radius: 50%;
+    font-size: 20px;
+    text-decoration: none;
+    z-index: 1000;
+  }
+
+  .whatsapp:hover {
+    background: #1ebe5d;
+  }
+</style>
 
 </body>
 </html>
