--- a/index.html
+++ b/index.html
@@ -1,37 +1,42 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Classificados Pedro II</title>
+  <meta charset="UTF-8">
+  <title>Classificados Pedro II</title>
+
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      padding: 15px 18px;
+      border-radius: 50%;
+      font-size: 20px;
+      text-decoration: none;
+      z-index: 1000;
+    }
+
+    .whatsapp:hover {
+      background: #1ebe5d;
+    }
+  </style>
 </head>
 
 <body>
 
-<h1>Classificados Gratuitos de Pedro II</h1>
-<p>Meu primeiro site</p>
-<!-- BOTÃO WHATSAPP -->
-<a href="https://wa.me/55 86 994323461" class="whatsapp" target="_blank">
-  💬
-</a>
+  <h1>Classificados Gratuitos de Pedro II</h1>
+  <p>Meu primeiro site</p>
 
-<style>
-  .whatsapp {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #25d366;
-    color: white;
-    padding: 15px 18px;
-    border-radius: 50%;
-    font-size: 20px;
-    text-decoration: none;
-    z-index: 1000;
-  }
+  <!-- BOTÃO WHATSAPP -->
+  <a href="https://wa.me/5586994323461" class="whatsapp" target="_blank">
+    💬
+  </a>
 
-  .whatsapp:hover {
-    background: #1ebe5d;
-  }
-</style>
-
-</body>davi
+</body>
 </html>
