--- a/index.html
+++ b/index.html
@@ -40,3 +40,26 @@
 
 </body>
 </html>
+<style>
+  body {
+    background-color: #f0fdf4; /* verde clarinho */
+    font-family: Arial;
+  }
+
+  .whatsapp {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #25d366;
+    color: white;
+    padding: 15px 18px;
+    border-radius: 50%;
+    font-size: 20px;
+    text-decoration: none;
+    z-index: 1000;
+  }
+
+  .whatsapp:hover {
+    background: #1ebe5d;
+  }
+</style>
