Refactor WhatsApp button and update styles
Updated WhatsApp button styling and repositioned it.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
   <style>
     body {
+      background-color: #f0fdf4; /* verde clarinho */
       font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 20px;
     }
 
     .whatsapp {
@@ -34,32 +37,11 @@
   <p>Meu primeiro site</p>
 
   <!-- BOTÃO WHATSAPP -->
-  <a href="https://wa.me/5586994323461" class="whatsapp" target="_blank">
+  <a class="whatsapp"
+     href="https://wa.me/5586994323461"
+     target="_blank">
     💬
   </a>
 
 </body>
 </html>
-<style>
-  body {
-    background-color: #f0fdf4; /* verde clarinho */
-    font-family: Arial;
-  }
-
-  .whatsapp {
-    position: fixed;
-    bottom: 20px;
-    right: 20px;
-    background: #25d366;
-    color: white;
-    padding: 15px 18px;
-    border-radius: 50%;
-    font-size: 20px;
-    text-decoration: none;
-    z-index: 1000;
-  }
-
-  .whatsapp:hover {
-    background: #1ebe5d;
-  }
-</style>
