Add footer section with styling to index.html
Added footer with contact information and styling.

--- a/index.html
+++ b/index.html
@@ -4,7 +4,14 @@
   <meta charset="UTF-8">
   <title>Classificados Pedro II</title>
 
-  <style>
+  <style>.rodape {
+  margin-top: 60px;
+  padding: 20px;
+  text-align: center;
+  background-color: #064e3b;
+  color: white;
+  font-size: 14px;
+}
     body {
       background-color: #f0fdf4; /* verde clarinho */
       font-family: Arial, sans-serif;
@@ -42,6 +49,10 @@
      target="_blank">
     💬
   </a>
-
+<footer class="rodape">
+  © 2026 – Classificados Gratuitos de Pedro II  
+  <br>
+  Contato: WhatsApp
+</footer>
 </body>
 </html>
