--- a/index.html
+++ b/index.html
@@ -4,14 +4,7 @@
   <meta charset="UTF-8">
   <title>Classificados Pedro II</title>
 
-  <style>.rodape {
-  margin-top: 60px;
-  padding: 20px;
-  text-align: center;
-  background-color: #064e3b;
-  color: white;
-  font-size: 14px;
-}
+  <style>
     body {
       background-color: #f0fdf4; /* verde clarinho */
       font-family: Arial, sans-serif;
@@ -35,6 +28,15 @@
     .whatsapp:hover {
       background: #1ebe5d;
     }
+
+    .rodape {
+      margin-top: 60px;
+      padding: 20px;
+      text-align: center;
+      background-color: #064e3b;
+      color: white;
+      font-size: 14px;
+    }
   </style>
 </head>
 
@@ -49,10 +51,13 @@
      target="_blank">
     💬
   </a>
-<footer class="rodape">
-  © 2026 – Classificados Gratuitos de Pedro II  
-  <br>
-  Contato: WhatsApp
-</footer>
+
+  <!-- RODAPÉ -->
+  <footer class="rodape">
+    © 2026 – Classificados Gratuitos de Pedro II  
+    <br>
+    Contato: WhatsApp
+  </footer>
+
 </body>
 </html>
