--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <style>
     body {
-      background-color: #f0fdf4; /* verde clarinho */
+      background-color: #f0fdf4;
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
@@ -69,8 +69,8 @@
 
   <!-- MENU -->
   <nav class="menu">
-    <a href="#">Início</a>
-    <a href="#">Anunciar</a>
+    <a href="index.html">Início</a>
+    <a href="anunciar.html">Anunciar</a>
     <a href="#">Contato</a>
   </nav>
 
