Update contact link and add newline at end of file

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <nav class="menu">
     <a href="index.html">Início</a>
     <a href="anunciar.html">Anunciar</a>
-    <a href="#">Contato</a>
+    <a href="contato.html">Contato</a>
   </nav>
 
   <!-- CONTEÚDO -->
