--- a/anunciar.html
+++ b/anunciar.html
@@ -3,60 +3,75 @@
 <head>
   <meta charset="UTF-8">
   <title>Anunciar – Classificados Pedro II</title>
-
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
   <style>
     body {
       background-color: #f0fdf4;
-      font-family: Arial, sans-serif;
+      font-family: 'Inter', sans-serif;
       margin: 0;
       padding: 0;
+      text-align: center;
+      color: #1f2937;
     }
 
     .menu {
       background-color: #064e3b;
       padding: 15px;
-      text-align: center;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
     .menu a {
       color: white;
-      margin: 0 15px;
+      margin: 0 20px;
       text-decoration: none;
-      font-weight: bold;
+      font-weight: 600;
+      font-size: 16px;
+      transition: color 0.3s;
+    }
+
+    .menu a:hover {
+      color: #10b981;
     }
 
     .conteudo {
-      padding: 20px;
+      padding: 80px 20px;
+    }
+
+    h1 {
+      color: #064e3b;
+      font-size: 36px;
+      margin-bottom: 20px;
+    }
+
+    p {
+      font-size: 18px;
+      line-height: 1.6;
     }
 
     .rodape {
       margin-top: 60px;
-      padding: 20px;
+      padding: 25px;
       text-align: center;
       background-color: #064e3b;
       color: white;
       font-size: 14px;
+      box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
     }
   </style>
 </head>
-
 <body>
 
   <nav class="menu">
-    <a href="index.html">Início</a>
-    <a href="anunciar.html">Anunciar</a>
-    <a href="#">Contato</a>
+    <a href="./index.html">Início</a>
+    <a href="./anunciar.html">Anunciar</a>
+    <a href="./contato.html">Contato</a>
   </nav>
 
   <div class="conteudo">
-    <h1>Anunciar grátis</h1>
-    <p>
-      Para anunciar, entre em contato pelo WhatsApp.
-    </p>
-
-    <p>
-      📱 WhatsApp: (86) 99432-3461
-    </p>
+    <h1>Anunciar Grátis</h1>
+    <p>Para anunciar, entre em contato pelo WhatsApp ou envie um e-mail:</p>
+    <p>📱 WhatsApp: (86) 99432-3461</p>
+    <p>✉️ E-mail: contato@classificadospedroii.com.br</p>
   </div>
 
   <footer class="rodape">
