Update contact email address in contato.html

--- a/contato.html
+++ b/contato.html
@@ -71,7 +71,7 @@
     <h1>Contato</h1>
     <p>Entre em contato conosco pelo WhatsApp ou e-mail:</p>
     <p>📱 WhatsApp: (86) 99432-3461</p>
-    <p>✉️ E-mail: contato@classificadospedroii.com.br</p>
+    <p>✉️ E-mail: luisdavidesousaesilvap2@gmail.com</p>
   </div>
 
   <footer class="rodape">
