--- a/anunciar.html
+++ b/anunciar.html
@@ -71,7 +71,7 @@
     <h1>Anunciar Grátis</h1>
     <p>Para anunciar, entre em contato pelo WhatsApp ou envie um e-mail:</p>
     <p>📱 WhatsApp: (86) 99432-3461</p>
-    <p>✉️ E-mail: contato@classificadospedroii.com.br</p>
+    <p>✉️ E-mail: luisdavidesousaesilvap2@gmail.com</p>
   </div>
 
   <footer class="rodape">
