Improve layout of .conteudo class in index.html
Added max-width and margin to .conteudo class for better layout.

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 
     .conteudo {
       padding: 80px 20px;
+      max-width: 700px;
+      margin: auto;
     }
 
     h1 {
@@ -96,8 +98,7 @@
   <a class="whatsapp" href="https://wa.me/5586994323461" target="_blank">💬</a>
 
   <footer class="rodape">
-    © 2026 – Classificados Gratuitos de Pedro II<br>
-    Contato: WhatsApp
+    © 2026 – Classificados Gratuitos de Pedro II
   </footer>
 
 </body>
