Change email contact in anunciar.html
Updated email contact for announcements.

--- a/anunciar.html
+++ b/anunciar.html
@@ -35,6 +35,8 @@
 
     .conteudo {
       padding: 80px 20px;
+      max-width: 600px;
+      margin: auto;
     }
 
     h1 {
@@ -71,7 +73,7 @@
     <h1>Anunciar Grátis</h1>
     <p>Para anunciar, entre em contato pelo WhatsApp ou envie um e-mail:</p>
     <p>📱 WhatsApp: (86) 99432-3461</p>
-    <p>✉️ E-mail: luisdavidesousaesilvap2@gmail.com</p>
+    <p>✉️ E-mail: contato@classificadospedroii.com.br</p>
   </div>
 
   <footer class="rodape">
