Refactor index.html layout and styling
Updated layout and styling for the menu and content sections, including adjustments to padding and maximum width. Removed unused elements such as WhatsApp button and footer.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>Classificados Pedro II</title>
+
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+
   <style>
     body {
       background-color: #f0fdf4;
@@ -14,6 +16,7 @@
       text-align: center;
     }
 
+    /* MENU */
     .menu {
       background-color: #064e3b;
       padding: 15px;
@@ -26,80 +29,18 @@
       text-decoration: none;
       font-weight: 600;
       font-size: 16px;
-      transition: color 0.3s;
     }
 
     .menu a:hover {
       color: #10b981;
     }
 
+    /* CONTEÚDO */
     .conteudo {
-      padding: 80px 20px;
-      max-width: 700px;
+      padding: 70px 20px;
+      max-width: 1000px;
       margin: auto;
     }
 
     h1 {
       color: #064e3b;
-      font-size: 42px;
-      margin-bottom: 20px;
-    }
-
-    p {
-      font-size: 20px;
-      line-height: 1.6;
-    }
-
-    .whatsapp {
-      position: fixed;
-      bottom: 25px;
-      right: 25px;
-      background: #25d366;
-      color: white;
-      padding: 18px 22px;
-      border-radius: 50%;
-      font-size: 24px;
-      text-decoration: none;
-      z-index: 1000;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-      transition: transform 0.2s, background 0.2s;
-    }
-
-    .whatsapp:hover {
-      background: #1ebe5d;
-      transform: scale(1.1);
-    }
-
-    .rodape {
-      margin-top: 60px;
-      padding: 25px;
-      text-align: center;
-      background-color: #064e3b;
-      color: white;
-      font-size: 14px;
-      box-shadow: 0 -2px 5px rgba(0,0,0,0.1);
-    }
-  </style>
-</head>
-<body>
-
-  <nav class="menu">
-    <a href="./index.html">Início</a>
-    <a href="./anunciar.html">Anunciar</a>
-    <a href="./contato.html">Contato</a>
-  </nav>
-
-  <div class="conteudo">
-    <h1>Classificados Gratuitos de Pedro II</h1>
-    <p>Bem-vindo ao site oficial de classificados da cidade de Pedro II!  
-    Aqui você pode anunciar produtos, serviços e entrar em contato facilmente.</p>
-  </div>
-
-  <a class="whatsapp" href="https://wa.me/5586994323461" target="_blank">💬</a>
-
-  <footer class="rodape">
-    © 2026 – Classificados Gratuitos de Pedro II
-  </footer>
-
-</body>
-</html>
