--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       margin: 0;
       padding: 0;
       color: #1f2937;
-      text-align: center;
     }
 
     /* MENU */
     .menu {
       background-color: #064e3b;
       padding: 15px;
+      text-align: center;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
     }
 
@@ -37,10 +37,70 @@
 
     /* CONTEÚDO */
     .conteudo {
-      padding: 70px 20px;
-      max-width: 1000px;
+      padding: 50px 20px;
+      max-width: 1100px;
       margin: auto;
+      text-align: center;
     }
 
     h1 {
       color: #064e3b;
+      font-size: 40px;
+      margin-bottom: 10px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 40px;
+    }
+
+    /* CARDS */
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 12px;
+      padding: 20px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #064e3b;
+    }
+
+    .card p {
+      font-size: 15px;
+      margin: 10px 0;
+    }
+
+    .card span {
+      font-weight: bold;
+      color: #10b981;
+    }
+
+    /* BOTÃO WHATSAPP */
+    .whatsapp {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: #25d366;
+      color: white;
+      padding: 18px 22px;
+      border-radius: 50%;
+      font-size: 24px;
+      text-decoration: none;
+      z-index: 1000;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
+    }
+
+    .whatsapp:hover {
+      background: #1ebe5d;
+    }
+
+    /* RODAPÉ */
