--- a/index.html
+++ b/index.html
@@ -2,105 +2,10 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Classificados Pedro II</title>
-
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-
-  <style>
-    body {
-      background-color: #f0fdf4;
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      padding: 0;
-      color: #1f2937;
-    }
-
-    /* MENU */
-    .menu {
-      background-color: #064e3b;
-      padding: 15px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    }
-
-    .menu a {
-      color: white;
-      margin: 0 20px;
-      text-decoration: none;
-      font-weight: 600;
-      font-size: 16px;
-    }
-
-    .menu a:hover {
-      color: #10b981;
-    }
-
-    /* CONTEÚDO */
-    .conteudo {
-      padding: 50px 20px;
-      max-width: 1100px;
-      margin: auto;
-      text-align: center;
-    }
-
-    h1 {
-      color: #064e3b;
-      font-size: 40px;
-      margin-bottom: 10px;
-    }
-
-    p {
-      font-size: 18px;
-      margin-bottom: 40px;
-    }
-
-    /* CARDS */
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-    }
-
-    .card {
-      background: white;
-      border-radius: 12px;
-      padding: 20px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: left;
-    }
-
-    .card h3 {
-      margin-top: 0;
-      color: #064e3b;
-    }
-
-    .card p {
-      font-size: 15px;
-      margin: 10px 0;
-    }
-
-    .card span {
-      font-weight: bold;
-      color: #10b981;
-    }
-
-    /* BOTÃO WHATSAPP */
-    .whatsapp {
-      position: fixed;
-      bottom: 25px;
-      right: 25px;
-      background: #25d366;
-      color: white;
-      padding: 18px 22px;
-      border-radius: 50%;
-      font-size: 24px;
-      text-decoration: none;
-      z-index: 1000;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.2);
-    }
-
-    .whatsapp:hover {
-      background: #1ebe5d;
-    }
-
-    /* RODAPÉ */
+  <title>Teste</title>
+</head>
+<body>
+  <h1>FUNCIONOU</h1>
+  <p>Se isso aparecer, o problema não é o navegador.</p>
+</body>
+</html>
