Revise title and improve page styling
Updated the title and added styles for layout and design.

--- a/index.html
+++ b/index.html
@@ -2,10 +2,77 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <title>Teste</title>
+  <title>Classificados Pedro II</title>
+
+  <style>
+    body {
+      background-color: #f0fdf4;
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      text-align: center;
+    }
+
+    .menu {
+      background-color: #064e3b;
+      padding: 15px;
+    }
+
+    .menu a {
+      color: white;
+      margin: 0 15px;
+      text-decoration: none;
+      font-weight: bold;
+    }
+
+    .menu a:hover {
+      text-decoration: underline;
+    }
+
+    .conteudo {
+      padding: 40px 20px;
+    }
+
+    .whatsapp {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background: #25d366;
+      color: white;
+      padding: 15px 18px;
+      border-radius: 50%;
+      font-size: 20px;
+      text-decoration: none;
+    }
+
+    .rodape {
+      margin-top: 60px;
+      padding: 20px;
+      background-color: #064e3b;
+      color: white;
+      font-size: 14px;
+    }
+  </style>
 </head>
+
 <body>
-  <h1>FUNCIONOU</h1>
-  <p>Se isso aparecer, o problema não é o navegador.</p>
+
+  <div class="menu">
+    <a href="index.html">Início</a>
+    <a href="anunciar.html">Anunciar</a>
+    <a href="contato.html">Contato</a>
+  </div>
+
+  <div class="conteudo">
+    <h1>Classificados Gratuitos de Pedro II</h1>
+    <p>Site de anúncios locais da cidade</p>
+  </div>
+
+  <a class="whatsapp" href="https://wa.me/5586994323461" target="_blank">💬</a>
+
+  <div class="rodape">
+    © 2026 – Classificados Gratuitos de Pedro II
+  </div>
+
 </body>
 </html>
