--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       text-align: center;
     }
 
+    /* MENU */
     .menu {
       background-color: #064e3b;
       padding: 15px;
@@ -29,10 +30,48 @@
       text-decoration: underline;
     }
 
+    /* CONTEÚDO */
     .conteudo {
       padding: 40px 20px;
+      max-width: 1100px;
+      margin: auto;
     }
 
+    h1 {
+      color: #064e3b;
+    }
+
+    /* CARDS */
+    .cards {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 20px;
+      margin-top: 40px;
+    }
+
+    .card {
+      background: white;
+      border-radius: 10px;
+      padding: 15px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      text-align: left;
+    }
+
+    .card h3 {
+      margin-top: 0;
+      color: #064e3b;
+    }
+
+    .card p {
+      font-size: 14px;
+    }
+
+    .card span {
+      font-weight: bold;
+      color: #10b981;
+    }
+
+    /* BOTÃO WHATSAPP */
     .whatsapp {
       position: fixed;
       bottom: 20px;
@@ -45,6 +84,7 @@
       text-decoration: none;
     }
 
+    /* RODAPÉ */
     .rodape {
       margin-top: 60px;
       padding: 20px;
@@ -57,22 +97,20 @@
 
 <body>
 
+  <!-- MENU -->
   <div class="menu">
     <a href="index.html">Início</a>
     <a href="anunciar.html">Anunciar</a>
     <a href="contato.html">Contato</a>
   </div>
 
+  <!-- CONTEÚDO -->
   <div class="conteudo">
     <h1>Classificados Gratuitos de Pedro II</h1>
     <p>Site de anúncios locais da cidade</p>
-  </div>
 
-  <a class="whatsapp" href="https://wa.me/5586994323461" target="_blank">💬</a>
+    <h2>Anúncios recentes</h2>
 
-  <div class="rodape">
-    © 2026 – Classificados Gratuitos de Pedro II
-  </div>
+    <div class="cards">
 
-</body>
-</html>
+      <div
