--- a/index.html
+++ b/index.html
@@ -1,116 +1,185 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <title>Classificados Pedro II</title>
+<meta charset="UTF-8">
+<title>Classificados Pedro II</title>
 
-  <style>
-    body {
-      background-color: #f0fdf4;
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      text-align: center;
-    }
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 
-    /* MENU */
-    .menu {
-      background-color: #064e3b;
-      padding: 15px;
-    }
+<style>
+* {
+  box-sizing: border-box;
+}
 
-    .menu a {
-      color: white;
-      margin: 0 15px;
-      text-decoration: none;
-      font-weight: bold;
-    }
+body {
+  margin: 0;
+  font-family: 'Inter', sans-serif;
+  background: #f9fafb;
+  color: #111827;
+}
 
-    .menu a:hover {
-      text-decoration: underline;
-    }
+/* MENU */
+.menu {
+  background: #064e3b;
+  padding: 15px;
+  text-align: center;
+}
 
-    /* CONTEÚDO */
-    .conteudo {
-      padding: 40px 20px;
-      max-width: 1100px;
-      margin: auto;
-    }
+.menu a {
+  color: #fff;
+  margin: 0 15px;
+  text-decoration: none;
+  font-weight: 600;
+}
 
-    h1 {
-      color: #064e3b;
-    }
+.menu a:hover {
+  color: #34d399;
+}
 
-    /* CARDS */
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 20px;
-      margin-top: 40px;
-    }
+/* CONTAINER */
+.container {
+  max-width: 1200px;
+  margin: auto;
+  padding: 40px 20px;
+}
 
-    .card {
-      background: white;
-      border-radius: 10px;
-      padding: 15px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      text-align: left;
-    }
+/* TÍTULO */
+.titulo {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
 
-    .card h3 {
-      margin-top: 0;
-      color: #064e3b;
-    }
+.titulo h2 {
+  margin: 0;
+}
 
-    .card p {
-      font-size: 14px;
-    }
+.titulo a {
+  text-decoration: none;
+  color: #064e3b;
+  font-weight: 600;
+}
 
-    .card span {
-      font-weight: bold;
-      color: #10b981;
-    }
+/* GRID */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  gap: 20px;
+}
 
-    /* BOTÃO WHATSAPP */
-    .whatsapp {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
-      background: #25d366;
-      color: white;
-      padding: 15px 18px;
-      border-radius: 50%;
-      font-size: 20px;
-      text-decoration: none;
-    }
+/* CARD */
+.card {
+  background: #fff;
+  border-radius: 12px;
+  overflow: hidden;
+  box-shadow: 0 5px 15px rgba(0,0,0,0.08);
+  transition: transform .2s;
+}
 
-    /* RODAPÉ */
-    .rodape {
-      margin-top: 60px;
-      padding: 20px;
-      background-color: #064e3b;
-      color: white;
-      font-size: 14px;
-    }
-  </style>
+.card:hover {
+  transform: translateY(-5px);
+}
+
+.card img {
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+}
+
+.card-content {
+  padding: 15px;
+}
+
+.card-content h3 {
+  margin: 0 0 8px;
+  font-size: 16px;
+}
+
+.card-content p {
+  font-size: 14px;
+  color: #4b5563;
+  margin-bottom: 10px;
+}
+
+.preco {
+  font-weight: 700;
+  color: #15803d;
+  margin-bottom: 8px;
+}
+
+.info {
+  display: flex;
+  justify-content: space-between;
+  font-size: 12px;
+  color: #6b7280;
+}
+</style>
 </head>
 
 <body>
 
-  <!-- MENU -->
-  <div class="menu">
-    <a href="index.html">Início</a>
-    <a href="anunciar.html">Anunciar</a>
-    <a href="contato.html">Contato</a>
+<!-- MENU -->
+<div class="menu">
+  <a href="#">Início</a>
+  <a href="#">Anunciar</a>
+  <a href="#">Contato</a>
+</div>
+
+<!-- CONTEÚDO -->
+<div class="container">
+
+  <div class="titulo">
+    <h2>Anúncios Recentes</h2>
+    <a href="#">Ver todos →</a>
   </div>
 
-  <!-- CONTEÚDO -->
-  <div class="conteudo">
-    <h1>Classificados Gratuitos de Pedro II</h1>
-    <p>Site de anúncios locais da cidade</p>
+  <div class="grid">
 
-    <h2>Anúncios recentes</h2>
+    <!-- CARD 1 -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9" alt="">
+      <div class="card-content">
+        <h3>iPhone 12 Pro 128GB</h3>
+        <p>Ótimo estado, sem arranhões. Bateria com 89%.</p>
+        <div class="preco">R$ 2.500</div>
+        <div class="info">
+          <span>📍 Centro</span>
+          <span>Venda</span>
+        </div>
+      </div>
+    </div>
 
-    <div class="cards">
+    <!-- CARD 2 -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc" alt="">
+      <div class="card-content">
+        <h3>Sofá 3 lugares</h3>
+        <p>Estado de novo, pouco usado. Motivo: mudança.</p>
+        <div class="preco">R$ 800</div>
+        <div class="info">
+          <span>📍 São José</span>
+          <span>Venda</span>
+        </div>
+      </div>
+    </div>
 
-      <div
+    <!-- CARD 3 -->
+    <div class="card">
+      <img src="https://images.unsplash.com/photo-1518655048521-f130df041f66" alt="">
+      <div class="card-content">
+        <h3>Troco bicicleta por celular</h3>
+        <p>Bicicleta aro 29, freio a disco.</p>
+        <div class="preco">Troca</div>
+        <div class="info">
+          <span>📍 Matadouro</span>
+          <span>Troca</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
+</body>
+</html>
