Fix menu positioning and update links
Added relative positioning and z-index to the menu for bug resolution. Updated links to point to specific HTML files.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@ body {
   background: #064e3b;
   padding: 15px;
   text-align: center;
+  position: relative;
+  z-index: 9999; /* ISSO RESOLVE O BUG */
 }
 
 .menu a {
@@ -121,9 +123,9 @@ body {
 
 <!-- MENU -->
 <div class="menu">
-  <a href="#">Início</a>
-  <a href="#">Anunciar</a>
-  <a href="#">Contato</a>
+  <a href="./index.html">Início</a>
+  <a href="./anunciar.html">Anunciar</a>
+  <a href="./contato.html">Contato</a>
 </div>
 
 <!-- CONTEÚDO -->
@@ -131,12 +133,11 @@ body {
 
   <div class="titulo">
     <h2>Anúncios Recentes</h2>
-    <a href="#">Ver todos →</a>
+    <a href="./anunciar.html">Ver todos →</a>
   </div>
 
   <div class="grid">
 
-    <!-- CARD 1 -->
     <div class="card">
       <img src="https://images.unsplash.com/photo-1511707171634-5f897ff02aa9" alt="">
       <div class="card-content">
@@ -150,7 +151,6 @@ body {
       </div>
     </div>
 
-    <!-- CARD 2 -->
     <div class="card">
       <img src="https://images.unsplash.com/photo-1555041469-a586c61ea9bc" alt="">
       <div class="card-content">
@@ -164,7 +164,6 @@ body {
       </div>
     </div>
 
-    <!-- CARD 3 -->
     <div class="card">
       <img src="https://images.unsplash.com/photo-1518655048521-f130df041f66" alt="">
       <div class="card-content">
